--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en" ng-app="abqfood">
 
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Food Inspector</title>
 
     <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -15,6 +18,14 @@
   </head>
 
   <body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="brand" href="#/top">Food Inspector</a>
+        </div>
+      </div>
+    </div>
+
     <div ng-view></div>
   </body>
 
