Add loading spinner.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/css/abqfood.css">
 
     <script src="/js/angular.min.js"></script>
+    <script src="/js/spin.min.js"></script>
+
     <script src="/js/controllers.js"></script>
     <script src="/js/filters.js"></script>
     <script src="/js/abqfood.js"></script>
